{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 44,
  "lineage": "ba3325b2-b799-33b1-4296-5fcb3dedfbee",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "westeurope",
            "name": "myNSG",
            "resource_group_name": "rgSarhad",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "myNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rgSarhad",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgSarhad",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2d2f43c7-99ff-43a3-b0cf-3cfc2457051e",
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/virtualNetworks/myVNet",
            "location": "westeurope",
            "name": "myVNet",
            "resource_group_name": "rgSarhad",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet",
                "name": "mySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/networkInterfaces/myVM-nic",
            "internal_domain_name_suffix": "y3bs4lp5tgruhmgpht4civyfdg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/publicIPAddresses/myVM-pip",
                "subnet_id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-97-A6-F2",
            "name": "myVM-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rgSarhad",
            "virtual_machine_id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_subnet.main",
            "module.network.azurerm_virtual_network.main",
            "module.virtual_machine.azurerm_public_ip.main"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/70438f0b-03a6-455f-a559-dd257af223a9/resourceGroups/rgSarhad/providers/Microsoft.Network/publicIPAddresses/myVM-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.69.85.28",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myVM-pip",
            "resource_group_name": "rgSarhad",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}